Fabric 7 website updates (#9461)

--- a/apps/fabric-website/index.html
+++ b/apps/fabric-website/index.html
@@ -120,7 +120,7 @@
         loadAppScripts(appPath);
       } else if (!isLocal) {
         // Update as new fabric versions and its documentation are supported
-        var fabricVersions = [5, 6];
+        var fabricVersions = [5, 6, 7];
 
         // Get fabricVer from URL param, session value, or latest version in array
         var fabricVersion = Number(
