--- a/apps/fabric-website/homepage.htm
+++ b/apps/fabric-website/homepage.htm
@@ -17,7 +17,7 @@
   var Flight = {};
 
   // Update as new fabric versions and its documentation are supported
-  var fabricVersions = [5, 6];
+  var fabricVersions = [5, 6, 7];
 
   // Get fabricVer from URL param, session value, or latest version in array
   var fabricVersion = Number(
