--- a/apps/fabric-website/index.html
+++ b/apps/fabric-website/index.html
@@ -39,8 +39,8 @@
     <script type="text/javascript">
       // @ts-check
       var isLocal = location.hostname === 'localhost' || location.hostname.indexOf('ngrok.io') > -1;
-      var isDev = isLocal || getParameterByName('isDev');
-      var isProduction = location.hostname === 'developer.microsoft.com' || getParameterByName('isProduction');
+      var isDev = isLocal || getParameterByName('isDev') === '1';
+      var isProduction = location.hostname === 'developer.microsoft.com' || getParameterByName('isProduction') === '1';
       var devhost = getParameterByName('devhost');
       var entryPointFilename = 'fabric-sitev5';
       var appPath = '';
@@ -123,14 +123,8 @@
       }
 
       function loadAppScripts() {
-        var version = isDev ? '.development.js' : '.production.min.js';
-        var reactPath = '//cdnjs.cloudflare.com/ajax/libs/react/16.8.6/umd/react' + version;
-        var reactDomPath = '//cdnjs.cloudflare.com/ajax/libs/react-dom/16.8.6/umd/react-dom' + version;
-
-        var scripts = [reactPath, reactDomPath, appPath + entryPointFilename + '.js'];
-
-        // Load React and app scripts
-        loadScripts(scripts);
+        // Load app scripts (we don't need to load React because it's bundled)
+        loadScripts([appPath + entryPointFilename + '.js']);
 
         // Required configuration to make our Monaco wrapper work
         window.MonacoConfig = {
