remove test-bundle from PR gate; move it to only be done inside the bundle job (#11673)
* remove test-bundle from PR gate; move it to only be done inside the bundlesize yaml

* getting rid of test-bundles dep from pr-deploy-site

* Change files

--- a/apps/pr-deploy-site/index.html
+++ b/apps/pr-deploy-site/index.html
@@ -118,9 +118,12 @@
       <li class="Tile">
         <a href="./date-time/dist/index.html" class="Tile-link"><i class="ms-Icon ms-Icon--PrimaryCalendar"></i>Date Time</a>
       </li>
+      <!--
+        TODO: temporarily disabling this for now until a new pipeline is created for PR Deploy Site builds
       <li class="Tile">
         <a href="./test-bundles/test-bundles.stats.html" class="Tile-link"><i class="ms-Icon ms-Icon--SpeedHigh"></i>Bundle Analyzer</a>
       </li>
+      -->
       <li class="Tile">
         <a href="./todo-app/index.html" class="Tile-link"><i class="ms-Icon ms-Icon--CheckMark"></i>Todo Example</a>
       </li>
