Lint and prettier updates (#12214)
* Lint and prettier config updates

* Change files

* Remove typedef and no-inferrable-types overrides

* Change files

* Update prettier.config.js

--- a/apps/fabric-website/homepage.htm
+++ b/apps/fabric-website/homepage.htm
@@ -126,9 +126,9 @@
   } else {
     var fabricVersions = [5, 6, 7];
 
-    var fabricVersion =
-      getParameterByName('fabricVer') || window.sessionStorage.getItem('fabricVer') || fabricVersions[fabricVersions.length - 1];
-    fabricVersion = Number(fabricVersion);
+    var fabricVersion = Number(
+      getParameterByName('fabricVer') || window.sessionStorage.getItem('fabricVer') || fabricVersions[fabricVersions.length - 1]
+    );
 
     if (fabricVersions.indexOf(fabricVersion) > -1) {
       window.sessionStorage.setItem('fabricVer', fabricVersion);
