--- a/packages/web-components/src/card/fixtures/card.html
+++ b/packages/web-components/src/card/fixtures/card.html
@@ -5,6 +5,12 @@
       width: 300px;
     }
 
+    .state-override {
+      --card-width: 350px;
+      --card-height: 300px;
+      --elevation: 6;
+    }
+
     .state-override:hover {
       --elevation: 12;
     }
@@ -17,11 +23,7 @@
   </style>
   <div>
     <fluent-card style="--card-height: 400px; --card-width: 500px;">
-      Card with text
-    </fluent-card>
-    <br />
-    <fluent-card class="class-override" style="--elevation: 12;">
-      Custom depth with class-based height/width
+      <button>Button</button>Card with text
     </fluent-card>
     <br />
     <fluent-card class="state-override">Custom depth on hover using CSS</fluent-card>
