--- a/packages/public-docsite-setup/index.html
+++ b/packages/public-docsite-setup/index.html
@@ -71,7 +71,7 @@
       <div class="loading">
         <img
           class="loadingImage"
-          src="https://static2.sharepointonline.com/files/fabric/fabric-website/images/spinner.gif"
+          src="https://res-1.cdn.office.net/files/fabric-cdn-prod_20221209.001/fabric-website/images/spinner.gif"
           alt="Loading"
           width="32"
           height="32"
