remove mwf styles (#26592)
* remove mwf styles

* change file

--- a/packages/public-docsite-setup/index.html
+++ b/packages/public-docsite-setup/index.html
@@ -8,6 +8,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" user-scalable="no" />
+    <!-- replicate the MWF styles being added to the live header -->
+    <link
+      href="https://mwf-service.akamaized.net/mwf/css/bundle/1.58.2/west-european/default/mwf-main.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <title>Fluent UI</title>
     <link
       href="https://devofficecdn.azureedge.net/themes/DevOffice/Content/favicon.ico"
